Redmine issue 1019: fixing search help --wiki page visibility

--- a/shared/css/bootstrap_override.css
+++ b/shared/css/bootstrap_override.css
@@ -1938,7 +1938,7 @@ The #searchFormDiv is on all search pages to control form fields, labels, select
 	width: 100% !important;
 	font: 500 .875rem apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	padding: 2px .5rem;
-	color: rgba(0, 0, 0, .67);
+	color: black;
 	border: 1px solid #ced4da;
 	background-clip: padding-box;
 	background-color: white;
